data/derived/comb/progs/unify/prog3372.ml.out
Characters 12-13:
  let rec a = a::[];;
              ^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
